[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/Menu/mathieu-chauderlot-room-0010-layer-18.jpg" type="Texture" id=1]
[ext_resource path="res://Art/Menu/Valorax-lg25V.otf" type="DynamicFontData" id=2]
[ext_resource path="res://GB Sound Assets/Menu Select 2.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Menu/MainMenu/new pause settingsMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.247059, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="SettingsMenu" type="CanvasLayer" parent="."]
layer = 124

[node name="Sprite" type="Sprite" parent="SettingsMenu"]
position = Vector2( 513, 298.625 )
scale = Vector2( 0.533333, 0.574768 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="SettingsMenu"]
margin_left = 154.0
margin_top = 13.0
margin_right = 1176.0
margin_bottom = 154.0
rect_scale = Vector2( 0.7, 1 )
size_flags_stretch_ratio = 1.77
custom_colors/font_color = Color( 0.360784, 0.219608, 0.160784, 1 )
custom_colors/font_outline_modulate = Color( 0.286275, 0.196078, 0.196078, 1 )
custom_colors/font_color_shadow = Color( 0.74902, 0.752941, 0.537255, 1 )
custom_fonts/font = SubResource( 1 )
text = "The Fortniters"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SettingsMenu/Label"]
__meta__ = {
"_editor_description_": "The Fortniters"
}

[node name="Clicksound2" type="AudioStreamPlayer" parent="SettingsMenu"]
stream = ExtResource( 3 )

[node name="volume" type="Button" parent="SettingsMenu"]
margin_left = 311.0
margin_top = 158.0
margin_right = 744.0
margin_bottom = 244.0
text = "Adjust Volume"

[node name="toVol" type="Button" parent="SettingsMenu/volume"]
margin_right = 435.0
margin_bottom = 87.0
text = "Adjust Volume"

[node name="HSlider" type="HSlider" parent="SettingsMenu"]
margin_left = 279.0
margin_top = 239.0
margin_right = 769.0
margin_bottom = 345.0
min_value = -30.0
max_value = 0.0

[node name="return" type="Button" parent="SettingsMenu"]
margin_left = 317.0
margin_top = 349.0
margin_right = 750.0
margin_bottom = 435.0
text = "Return to Menu"

[node name="backtomenu2" type="Button" parent="SettingsMenu/return"]
margin_left = -6.0
margin_top = 2.0
margin_right = 439.0
margin_bottom = 89.0
text = "Return to Settings"

[node name="Clicksound4" type="AudioStreamPlayer" parent="SettingsMenu/return/backtomenu2"]
stream = ExtResource( 3 )

[connection signal="value_changed" from="SettingsMenu/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="button_down" from="SettingsMenu/return/backtomenu2" to="." method="_on_backtomenu2_button_down"]
[connection signal="pressed" from="SettingsMenu/return/backtomenu2" to="." method="_on_backtomenu2_pressed"]
